Change svg favicon type

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="Full Stack Software Engineer specializing in secure and scalable applications.">
   <meta property="og:image" content="https://jacobarthurs.com/og-image.png">
   <meta property="og:site_name" content="Jacob Arthurs">
-  
+
   <!-- Twitter Card tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jacob Arthurs">
@@ -27,7 +27,7 @@
   <meta name="twitter:image" content="https://jacobarthurs.com/og-image.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="JA_logo.svg">
+  <link rel="icon" type="image/svg+xml" href="JA_logo.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
